--- a/WeatherTestApp/WeatherList/WeatherListViewCell.xib
+++ b/WeatherTestApp/WeatherList/WeatherListViewCell.xib
@@ -51,6 +51,11 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="CityLabel" destination="vdg-Qj-5gL" id="WvO-a4-aj2"/>
+                <outlet property="TemperatureLabel" destination="Mku-9F-5tX" id="xof-9I-atg"/>
+                <outlet property="TimeLabel" destination="hpi-2y-AJU" id="Pia-2B-Jfz"/>
+            </connections>
             <point key="canvasLocation" x="198.55072463768118" y="177.12053571428569"/>
         </tableViewCell>
     </objects>
