--- a/WeatherTestApp/Base.lproj/Main.storyboard
+++ b/WeatherTestApp/Base.lproj/Main.storyboard
@@ -82,9 +82,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="sog-WZ-Ofx"/>
                     <connections>
-                        <outlet property="AddCityButton" destination="fHp-DY-SEC" id="5j0-Tl-Nba"/>
-                        <outlet property="TemperatureLabel" destination="XGK-IF-pz1" id="sgv-SF-RqF"/>
+                        <outlet property="addCityButton" destination="fHp-DY-SEC" id="5j0-Tl-Nba"/>
                         <outlet property="tableView" destination="7hE-yZ-zof" id="9HC-FE-QDC"/>
+                        <outlet property="temperatureLabel" destination="XGK-IF-pz1" id="sgv-SF-RqF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
