--- a/WeatherTestApp/WeatherList/Cell/WeatherListViewCell.xib
+++ b/WeatherTestApp/WeatherList/Cell/WeatherListViewCell.xib
@@ -52,10 +52,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="CityLabel" destination="vdg-Qj-5gL" id="WvO-a4-aj2"/>
-                <outlet property="TemperatureLabel" destination="Mku-9F-5tX" id="xof-9I-atg"/>
-                <outlet property="TimeLabel" destination="hpi-2y-AJU" id="Pia-2B-Jfz"/>
-                <outlet property="WeatherImage" destination="wiP-3a-qBB" id="BqX-UO-sZe"/>
+                <outlet property="cityLabel" destination="vdg-Qj-5gL" id="WvO-a4-aj2"/>
+                <outlet property="temperatureLabel" destination="Mku-9F-5tX" id="xof-9I-atg"/>
+                <outlet property="timeLabel" destination="hpi-2y-AJU" id="Pia-2B-Jfz"/>
+                <outlet property="weatherImage" destination="wiP-3a-qBB" id="BqX-UO-sZe"/>
             </connections>
             <point key="canvasLocation" x="198.55072463768118" y="177.12053571428569"/>
         </tableViewCell>
