--- a/WeatherTestApp/WeatherList/Cell/WeatherListViewCell.xib
+++ b/WeatherTestApp/WeatherList/Cell/WeatherListViewCell.xib
@@ -16,6 +16,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="404" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wiP-3a-qBB">
+                        <rect key="frame" x="0.0" y="0.0" width="404" height="120"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mku-9F-5tX">
                         <rect key="frame" x="340" y="48" width="42" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -23,28 +27,24 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hpi-2y-AJU">
-                        <rect key="frame" x="18" y="20" width="42" height="21"/>
+                        <rect key="frame" x="22" y="20" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vdg-Qj-5gL">
-                        <rect key="frame" x="18" y="65" width="42" height="24"/>
+                        <rect key="frame" x="22" y="65" width="42" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wiP-3a-qBB">
-                        <rect key="frame" x="0.0" y="0.0" width="404" height="120"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="hpi-2y-AJU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="92d-1q-7wo"/>
                     <constraint firstItem="Mku-9F-5tX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="48" id="OVj-2J-cTs"/>
                     <constraint firstAttribute="bottom" secondItem="Mku-9F-5tX" secondAttribute="bottom" constant="48" id="cGU-VQ-2Qf"/>
-                    <constraint firstItem="Mku-9F-5tX" firstAttribute="leading" secondItem="vdg-Qj-5gL" secondAttribute="trailing" constant="280" id="m1n-Uj-8LB"/>
-                    <constraint firstItem="Mku-9F-5tX" firstAttribute="leading" secondItem="hpi-2y-AJU" secondAttribute="trailing" constant="280" id="nsw-cz-T04"/>
+                    <constraint firstItem="vdg-Qj-5gL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="dE0-IB-6vz"/>
+                    <constraint firstItem="hpi-2y-AJU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="nW9-9L-5DU"/>
                     <constraint firstAttribute="trailing" secondItem="Mku-9F-5tX" secondAttribute="trailing" constant="22" id="u50-jp-928"/>
                     <constraint firstItem="vdg-Qj-5gL" firstAttribute="top" secondItem="hpi-2y-AJU" secondAttribute="bottom" constant="24" id="xiu-21-Lm1"/>
                     <constraint firstAttribute="bottomMargin" secondItem="vdg-Qj-5gL" secondAttribute="bottom" constant="20" id="ye8-Bd-4gR"/>
