add label button textfield on next page

--- a/WeatherTestApp/Base.lproj/Main.storyboard
+++ b/WeatherTestApp/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                         <rect key="frame" x="346" y="10" width="46" height="69.5"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
-                                            <segue destination="dSY-Et-HXe" kind="showDetail" id="jV8-z9-VW4"/>
+                                            <segue destination="dSY-Et-HXe" kind="presentation" identifier="addCitySegue" id="jV8-z9-VW4"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -107,34 +107,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="46M-uE-oEs">
-                                <rect key="frame" x="159" y="294" width="97" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tME-NJ-7QQ">
+                                <rect key="frame" x="157" y="404" width="100" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zS-YC-4ZR">
-                                <rect key="frame" x="186" y="235" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wit-t4-hYb">
+                                <rect key="frame" x="186" y="343" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jwy-E5-vDY">
-                                <rect key="frame" x="186" y="371" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBc-Ht-VlP">
+                                <rect key="frame" x="184" y="478" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="SubmitButton:" destination="07p-XR-Jg0" eventType="touchUpInside" id="ppp-ul-R4X"/>
+                                    <action selector="exit:" destination="07p-XR-Jg0" eventType="touchUpInside" id="Mqs-Ik-mZd"/>
+                                    <action selector="exitButton:" destination="07p-XR-Jg0" eventType="touchDragExit" id="Cdk-3C-O4Q"/>
+                                    <action selector="submitButton:" destination="07p-XR-Jg0" eventType="touchUpInside" id="cXu-Jg-mhn"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="46M-uE-oEs" firstAttribute="centerX" secondItem="ndZ-V5-xbH" secondAttribute="centerX" id="5uf-wn-J55"/>
+                            <constraint firstItem="tME-NJ-7QQ" firstAttribute="centerY" secondItem="vlC-ep-Wt3" secondAttribute="centerY" id="6Mk-wX-342"/>
+                            <constraint firstItem="WBc-Ht-VlP" firstAttribute="centerX" secondItem="tME-NJ-7QQ" secondAttribute="centerX" id="Dke-d2-Y90"/>
+                            <constraint firstItem="tME-NJ-7QQ" firstAttribute="leading" secondItem="ndZ-V5-xbH" secondAttribute="leading" constant="157" id="NyV-PC-m1d"/>
+                            <constraint firstItem="WBc-Ht-VlP" firstAttribute="top" secondItem="tME-NJ-7QQ" secondAttribute="bottom" constant="40" id="afY-n3-1HT"/>
+                            <constraint firstItem="tME-NJ-7QQ" firstAttribute="top" secondItem="wit-t4-hYb" secondAttribute="bottom" constant="40" id="htg-7x-56p"/>
+                            <constraint firstItem="tME-NJ-7QQ" firstAttribute="centerX" secondItem="ndZ-V5-xbH" secondAttribute="centerX" id="mI5-hk-PGz"/>
+                            <constraint firstItem="wit-t4-hYb" firstAttribute="centerX" secondItem="tME-NJ-7QQ" secondAttribute="centerX" id="vcx-3r-7wX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ndZ-V5-xbH"/>
                     </view>
+                    <connections>
+                        <outlet property="changeCityLabel" destination="wit-t4-hYb" id="3tS-w7-Sir"/>
+                        <outlet property="cityNameField" destination="tME-NJ-7QQ" id="Uez-22-Cx8"/>
+                        <outlet property="submitButton" destination="WBc-Ht-VlP" id="ON0-AP-itg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NDU-bR-D06" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="07p-XR-Jg0" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="899" y="138"/>
+            <point key="canvasLocation" x="898.55072463768124" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
